--- a/projects/frontend/src/app/pages/player-list/player-list/player-list.component.html
+++ b/projects/frontend/src/app/pages/player-list/player-list/player-list.component.html
@@ -4,7 +4,7 @@
       <h1 rtl class="main-heading">{{ 'pldb.players.title' | translate }}</h1>
     </div>
   </div>
-  <div class="row align-items-end">
+  <div class="row">
     <div *ngFor="let player of players" class="col-md-6 col-lg-4" [ngClass]="routeAnimationsElements">
       <pldb-player-card [player]="player"></pldb-player-card>
     </div>
