--- a/projects/frontend/src/app/app/app.component.html
+++ b/projects/frontend/src/app/app/app.component.html
@@ -10,9 +10,6 @@
           routerLinkActive="active">
           {{item.label | translate}}
         </a>
-        <a mat-list-item href="https://github.com/tomastrajan/frontend" target="_blank">
-          Github
-        </a>
       </mat-nav-list>
     </mat-sidenav>
 
@@ -39,7 +36,7 @@
             </button>
           </span>
 
-          <button mat-button mat-stroked-button *ngIf="!(isAuthenticated$ | async)" (click)="onLoginClick()">
+         <!-- <button mat-button mat-stroked-button *ngIf="!(isAuthenticated$ | async)" (click)="onLoginClick()">
             {{ 'pldb.menu.login' | translate }}
           </button>
 
@@ -53,7 +50,7 @@
               <mat-icon><fa-icon icon="power-off"></fa-icon></mat-icon>
               <span>{{ 'pldb.menu.logout' | translate }}</span>
             </button>
-          </mat-menu>
+          </mat-menu> -->
 
           <span *ngIf="language$ | async as language">
             <mat-select [ngModel]="language" (selectionChange)="onLanguageSelect($event)">
@@ -74,6 +71,7 @@
       </div>
 
       <div class="footer">
+        <!-- 
         <div class="row">
           <div class="col-sm-12 links">
             <a href="https://www.github.com/tomastrajan" target="_blank">
@@ -102,17 +100,11 @@
               <span>Slides</span>
             </a>
           </div>
-        </div>
+        </div> -->
         <div class="row">
           <div class="col-12 signature">
             &#169; <span class="year">{{year}}</span> - Ali Nasserzadeh
             <br class="d-block d-sm-none">
-            <a [matTooltip]="'pldb.footer.changelog' | translate"
-               matTooltipPosition="before"
-               href="https://github.com/tomastrajan/frontend/blob/master/CHANGELOG.md">
-              <fa-icon icon="rocket"></fa-icon>
-              {{version}} <span *ngIf="!isProd">[{{envName}}]</span>
-            </a>
           </div>
         </div>
       </div>
