--- a/projects/frontend/src/app/pages/player-list/player-card/player-card.component.scss
+++ b/projects/frontend/src/app/pages/player-list/player-card/player-card.component.scss
@@ -19,6 +19,12 @@ mat-card {
       height: 40px;
       border-radius: 50%;
     }
+    
+    .player-name {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 
   mat-card-subtitle {
